--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,3 +20,9 @@ steps:
     publishJUnitResults: false
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
+    
+- task: ArtifactoryPublishBuildInfo@1
+  inputs:
+    artifactoryService: 'Texas Mutual Artifactory Server'
+    buildName: '$(Build.DefinitionName)'
+    buildNumber: '$(Build.BuildNumber)'
