--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,12 @@ steps:
     publishJUnitResults: false
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
-    
+    artifactoryResolverService: 'Texas Mutual Artifactory Server'
+    artifactoryDeployService: 'Texas Mutual Artifactory Server'
+    collectBuildInfo: true
+    buildName: '$(Build.DefinitionName)'
+    buildNumber: '$(Build.BuildNumber)'
+
 - task: ArtifactoryPublishBuildInfo@1
   inputs:
     artifactoryService: 'Texas Mutual Artifactory Server'
