Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,21 +7,19 @@ trigger:
 - master
 
 steps:
-- task: Maven@3
+- task: ArtifactoryMaven@1
   inputs:
     mavenPomFile: 'pom.xml'
-    mavenOptions: '-Xmx3072m'
-    javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '1.11'
-    jdkArchitectureOption: 'x64'
-    publishJUnitResults: false
-    testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
+    options: mavenOptions='-Xmx3072m' javaHomeOption='JDKVersion' jdkVersionOption='1.11' jdkArchitectureOption='x64' publishJUnitResults=false  testResultsFiles='**/surefire-reports/TEST-*.xml'
     artifactoryResolverService: 'Texas Mutual Artifactory Server'
     artifactoryDeployService: 'Texas Mutual Artifactory Server'
+    targetDeploySnapshotRepo: 'txmutual-maven-dev-local'
     collectBuildInfo: true
     buildName: '$(Build.DefinitionName)'
     buildNumber: '$(Build.BuildNumber)'
+    includeEnvVars: true
+    targetResolveSnapshotRepo: 'maven-dev'
 
 - task: ArtifactoryPublishBuildInfo@1
   inputs:
