--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,8 +11,8 @@ steps:
   inputs:
     mavenPomFile: 'pom.xml'
     goals: 'package'
-    artifactoryResolverService: 'Texas Mutual Artifactory Server'
-    artifactoryDeployService: 'Texas Mutual Artifactory Server'
+    artifactoryResolverService: 'texasmutual-artifactory-server'
+    artifactoryDeployService: 'texasmutual-artifactory-server'
     targetDeploySnapshotRepo: 'txmutual-maven-dev-local'
     collectBuildInfo: true
     buildName: '$(Build.DefinitionName)'
@@ -22,6 +22,6 @@ steps:
     
 - task: ArtifactoryPublishBuildInfo@1
   inputs:
-    artifactoryService: 'Texas Mutual Artifactory Server'
+    artifactoryService: 'texasmutual-artifactory-server'
     buildName: '$(Build.DefinitionName)'
     buildNumber: '$(Build.BuildNumber)'
